--- a/index.html
+++ b/index.html
@@ -10,23 +10,40 @@
 </head>
 
 <body>
-    Greguerías de Ramón Gómez de la Serna
+    <h1>
+        Greguerías de Ramón Gómez de la Serna
+    </h1>
+    <p class="infancia">
+        Cuando anuncian por el altavoz que se ha perdido un niño, siempre pienso que ese niño soy yo.
+    </p>
 
-    Cuando anuncian por el altavoz que se ha perdido un niño, siempre pienso que ese niño soy yo.
+    <p class="animal">
+        Las golondrinas son pájaros vestidos de etiqueta.
+    </p>
 
-    Las golondrinas son pájaros vestidos de etiqueta.
+    <p class="literatura">
+        El escritor quiere escribir su mentira y escribe su verdad.
+    </p>
 
-    El escritor quiere escribir su mentira y escribe su verdad.
+    <p class="infancia">
+        El niño grita: "¡No vale!"... "¡Dos contra uno!", y no sabe que toda la vida es eso: dos contra uno.
+    </p>
 
-    El niño grita: "¡No vale!"... "¡Dos contra uno!", y no sabe que toda la vida es eso: dos contra uno.
+    <p class="literatura">
+        El libro es un pájaro con más de cien alas para volar.
+    </p>
 
-    El libro es un pájaro con más de cien alas para volar.
+    <p class="numeros">
+        Los ceros son los huevos de los que salieron las demás cifras.
+    </p>
 
-    Los ceros son los huevos de los que salieron las demás cifras.
-
-    Al callarse la chicharra de pronto, parece que ha habido una avería eléctrica.
-
-    El 6 es el número que va a tener familia.
+    <p class="animal">
+        Al callarse la chicharra de pronto, parece que ha habido una avería eléctrica.
+    </p>
+    
+    <p class="numeros">
+        El 6 es el número que va a tener familia.
+    </p>
 </body>
 
 </html>
